<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CadUsuario">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:background="@color/azul_escuro"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="328dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/logo_italac"
            android:contentDescription="TODO" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="165dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editNome"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/nome"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/editTelefone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/Telefone"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/senha"
            android:password="true"
            android:textSize="16dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/butonCadastra"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@color/azul_claro"
            android:text="@string/Cadastrar"
            android:textColor="@color/branco"
            android:textSize="20dp"/>

    </LinearLayout>

</RelativeLayout>