<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Login">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:background="@color/azul_escuro"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="328dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/logo_italac"
            android:contentDescription="TODO" />

    </LinearLayout>


    <EditText
        android:id="@+id/EditEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/branco"
        android:hint="@string/email"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/EditSenha"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/branco"
        android:hint="@string/senha"
        android:password="true"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/EditEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/EditEmail"
        app:layout_constraintTop_toBottomOf="@+id/EditEmail" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:onClick="callReset"
        android:text="Recuperar Senha"
        android:textColor="#0000ff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButonFacebook" />

    <Button
        android:id="@+id/ButonCadastro"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"


        android:background="@color/azul_claro"
        android:text="@string/cadastraSe"
        android:textColor="@color/branco"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ButonEntra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toEndOf="@+id/ButonEntra"
        app:layout_constraintTop_toTopOf="@+id/ButonEntra"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/ButonEntra"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:background="@color/azul_claro"
        android:text="@string/entrar"
        android:textColor="@color/branco"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditSenha" />

    <Button
        android:id="@+id/ButonFacebook"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/azul_claro"
        android:text="Facebook"
        android:textColor="@color/branco"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButonEntra" />

</androidx.constraintlayout.widget.ConstraintLayout>